[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api_utils"
version = "0.1.0"
description = "A utility package for {{info.name}} microservices"
authors = [{name = "Mike Storey", email = "devs@agile-learning.institute"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "pymongo",
    "prometheus-flask-exporter",
]

[project.optional-dependencies]
dev = ["black", "pytest", "unittest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["api_utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
# Exclude e2e test file from collection when running unit tests
# (e2e tests are run separately via pipenv run e2e)
norecursedirs = []
markers = [
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')"
]